basic ajax requests to send/receive json object

--- a/trunk/BullyGame/war/WEB-INF/web.xml
+++ b/trunk/BullyGame/war/WEB-INF/web.xml
@@ -10,10 +10,18 @@
     <servlet-name>greetServlet</servlet-name>
     <servlet-class>edu.villanova.csc9010.bullygame.server.GreetingServiceImpl</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>GameServlet</servlet-name>
+    <servlet-class>edu.villanova.csc9010.bullygame.server.GameServlet</servlet-class>
+  </servlet>
   
   <servlet-mapping>
     <servlet-name>greetServlet</servlet-name>
     <url-pattern>/bullygame/greet</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>GameServlet</servlet-name>
+    <url-pattern>/bullygame/game</url-pattern>
   </servlet-mapping>
   
   <!-- Default page to serve -->
