--- a/trunk/BullyGame/.settings/com.google.gdt.eclipse.core.prefs
+++ b/trunk/BullyGame/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,4 +1,5 @@
-#Wed Feb 23 19:29:42 EST 2011
+#Wed Feb 23 20:58:19 EST 2011
 eclipse.preferences.version=1
+launchConfigExternalUrlPrefix=
 warSrcDir=war
 warSrcDirIsOutput=true
