Added some code for logging in users and logging their logins.

--- a/.hgignore
+++ b/.hgignore
@@ -8,3 +8,4 @@ trunk/BullyGame/war/bullygame/bullygame.nocache.js
 trunk/BullyGame/war/bullygame/clear.cache.gif
 trunk/BullyGame/war/bullygame/hosted.html
 trunk/BullyGame/war/WEB-INF/deploy/bullygame/rpcPolicyManifest/*
+trunk/BullyGame/war/WEB-INF/appengine-generated/local_db.bin
