--- a/trunk/BullyGame/war/WEB-INF/web.xml
+++ b/trunk/BullyGame/war/WEB-INF/web.xml
@@ -15,8 +15,8 @@
     <servlet-class>edu.villanova.csc9010.bullygame.server.GameServlet</servlet-class>
   </servlet>
   <servlet>
-  	<servlet-name>Users</servlet-name>
-  	<servlet-class>edu.villanova.csc9010.bullygame.server.UsersServlet</servlet-class>
+    <servlet-name>Users</servlet-name>
+    <servlet-class>edu.villanova.csc9010.bullygame.server.UsersServlet</servlet-class>
   </servlet>
 
   <servlet-mapping>
@@ -29,11 +29,26 @@
   </servlet-mapping>
   
   <!-- Default page to serve --><servlet-mapping>
-  	<servlet-name>Users</servlet-name>
-  	<url-pattern>/users/*</url-pattern>
-</servlet-mapping>
-	<welcome-file-list>
+  <servlet-name>Users</servlet-name>
+    <url-pattern>/users/*</url-pattern>
+  </servlet-mapping>
+  <welcome-file-list>
     <welcome-file>jsps/index.jsp</welcome-file>
   </welcome-file-list>
+  
+  <filter>
+    <filter-name>sitemesh</filter-name>
+    <filter-class>com.opensymphony.sitemesh.webapp.SiteMeshFilter</filter-class>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>sitemesh</filter-name>
+    <url-pattern>/jsps/*</url-pattern>
+  </filter-mapping>
+
+  <filter-mapping>
+    <filter-name>sitemesh</filter-name>
+    <url-pattern>/</url-pattern>
+  </filter-mapping>
 
 </web-app>
