--- a/trunk/BullyGame/war/WEB-INF/web.xml
+++ b/trunk/BullyGame/war/WEB-INF/web.xml
@@ -18,6 +18,10 @@
     <servlet-name>Users</servlet-name>
     <servlet-class>edu.villanova.csc9010.bullygame.server.UsersServlet</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>createGame</servlet-name>
+    <servlet-class>edu.villanova.csc9010.bullygame.server.createGameServlet</servlet-class>
+  </servlet>
 
   <servlet-mapping>
     <servlet-name>greetServlet</servlet-name>
@@ -28,7 +32,7 @@
     <url-pattern>/bullygame/game</url-pattern>
   </servlet-mapping>
     <servlet-mapping>
-    <servlet-name>createGameServlet</servlet-name>
+    <servlet-name>createGame</servlet-name>
     <url-pattern>/newGame</url-pattern>
   </servlet-mapping>
   
