--- a/trunk/BullyGame/.settings/com.google.gdt.eclipse.core.prefs
+++ b/trunk/BullyGame/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,5 +1,6 @@
-#Tue Mar 08 12:23:51 EST 2011
+#Wed Mar 16 18:14:35 EDT 2011
 eclipse.preferences.version=1
+jarsExcludedFromWebInfLib=
 launchConfigExternalUrlPrefix=
 warSrcDir=war
 warSrcDirIsOutput=true
