--- a/trunk/BullyGame/.settings/com.google.gwt.eclipse.core.prefs
+++ b/trunk/BullyGame/.settings/com.google.gwt.eclipse.core.prefs
@@ -1,3 +1,4 @@
-#Wed Feb 23 19:29:43 EST 2011
+#Wed Mar 16 18:14:36 EDT 2011
 eclipse.preferences.version=1
+entryPointModules=
 filesCopiedToWebInfLib=gwt-servlet.jar
