--- a/trunk/BullyGame/war/WEB-INF/web.xml
+++ b/trunk/BullyGame/war/WEB-INF/web.xml
@@ -22,6 +22,14 @@
     <servlet-name>createGame</servlet-name>
     <servlet-class>edu.villanova.csc9010.bullygame.server.createGameServlet</servlet-class>
   </servlet>
+  <servlet>
+        <servlet-name>sign</servlet-name>
+        <servlet-class>edu.villanova.csc9010.bullygame.server.SignGuestbookServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>sign</servlet-name>
+        <url-pattern>/sign</url-pattern>
+    </servlet-mapping>
 
   <servlet-mapping>
     <servlet-name>greetServlet</servlet-name>
@@ -40,6 +48,9 @@
   <servlet-name>Users</servlet-name>
     <url-pattern>/users/*</url-pattern>
   </servlet-mapping>
+	
+
+	
   <welcome-file-list>
     <welcome-file>jsp/index.jsp</welcome-file>
   </welcome-file-list>
