--- a/trunk/BullyGame/war/WEB-INF/web.xml
+++ b/trunk/BullyGame/war/WEB-INF/web.xml
@@ -3,7 +3,7 @@
     PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
     "http://java.sun.com/dtd/web-app_2_3.dtd">
 
-<web-app>
+<web-app version="2.4">
   
   <!-- Servlets -->
   <servlet>
@@ -21,6 +21,10 @@
   <servlet>
     <servlet-name>createGame</servlet-name>
     <servlet-class>edu.villanova.csc9010.bullygame.server.createGameServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>Friends</servlet-name>
+    <servlet-class>edu.villanova.csc9010.bullygame.server.FriendsServlet</servlet-class>
   </servlet>
   <servlet>
         <servlet-name>sign</servlet-name>
@@ -43,6 +47,14 @@
     <servlet-name>createGame</servlet-name>
     <url-pattern>/newGame</url-pattern>
   </servlet-mapping>
+    <servlet-mapping>
+    <servlet-name>Friends</servlet-name>
+    <url-pattern>/friends</url-pattern>
+  </servlet-mapping>
+    <servlet-mapping>
+    <servlet-name>Friends</servlet-name>
+    <url-pattern>/friends/*</url-pattern>
+  </servlet-mapping>
   
   <!-- Default page to serve --><servlet-mapping>
   <servlet-name>Users</servlet-name>
@@ -52,7 +64,7 @@
 
 	
   <welcome-file-list>
-    <welcome-file>jsp/index.jsp</welcome-file>
+    <welcome-file>jsp/main/index.jsp</welcome-file>
   </welcome-file-list>
   
   <filter>
@@ -62,7 +74,12 @@
 
   <filter-mapping>
     <filter-name>sitemesh</filter-name>
-    <url-pattern>/jsp/*</url-pattern>
+    <url-pattern>/jsp/main/*</url-pattern>
+  </filter-mapping>
+
+  <filter-mapping>
+    <filter-name>sitemesh</filter-name>
+    <url-pattern>/jsp/game/*</url-pattern>
   </filter-mapping>
 
   <filter-mapping>
